# RL4VLA

./: .gitignore  README.md  main.ipynb  pyproject.toml
ManiSkill/: setup.py
ManiSkill/mani_skill/envs/tasks/digital_twins/bridge_dataset_eval/: put_on_in_scene_multi.py
ManiSkill/mani_skill/examples/motionplanning/widowx/: collect_simpler.py
SimplerEnv/simpler_env/policies/octo/: octo_model.py
SimplerEnv/simpler_env/policies/openvla/: openvla_train.py
openvla/prismatic/vla/datasets/: datasets.py
openvla/prismatic/vla/datasets/rlds/: dataset.py
openvla/prismatic/vla/datasets/rlds/oxe/: configs.py  transforms.py
openvla/rlds_dataset_builder/warmup_dataset/: warmup_dataset.py
openvla/vla-scripts/: finetune.py
