[project]
name = "rl4vla"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bert-score>=0.3.13",
    "bitsandbytes>=0.47.0",
    "comet-ml>=3.52.1",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "peft>=0.17.1",
    "transformers>=4.56.1",
    "trl>=0.23.0",
]
